add more parameter

--- a/shallow_learning.ipynb
+++ b/shallow_learning.ipynb
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "385951dd",
+   "id": "f1efada9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87add63",
+   "id": "eb9e75c1",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -496,14 +496,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "rf = RandomForestClassifier()\n",
-    "rf_model = rf.fit(X_train_vect_avg, y_train)"
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2968e1c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_gini_100 = RandomForestClassifier(random_state=0, criterion='gini', n_estimators=100).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ba729b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_gini_300 = RandomForestClassifier(random_state=0, criterion='gini', n_estimators=300).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8520a3de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_entropy_100 = RandomForestClassifier(random_state=0, criterion='entropy', n_estimators=100).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fb6b1096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_entropy_300 = RandomForestClassifier(random_state=0, criterion='entropy', n_estimators=300).fit(X_train_vect_avg, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d783667",
+   "id": "bb14d432",
    "metadata": {},
    "source": [
     "### XGBoost"
@@ -511,19 +549,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "edd4e357",
+   "execution_count": 21,
+   "id": "b07466e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "xgb = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0,max_depth=1, random_state=0)\n",
-    "xgb_model = xgb.fit(X_train_vect_avg, y_train)"
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b9c5350f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_friedman_100 = GradientBoostingClassifier(\n",
+    "                        criterion='friedman_mse', n_estimators=100, random_state=0).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e227d196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_friedman_300 = GradientBoostingClassifier(\n",
+    "                        criterion='friedman_mse', n_estimators=300, random_state=0).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "4da79c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_se_100 = GradientBoostingClassifier(\n",
+    "                        criterion='squared_error', n_estimators=100, random_state=0).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "60e2815c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_se_300 = GradientBoostingClassifier(\n",
+    "                        criterion='squared_error', n_estimators=300, random_state=0).fit(X_train_vect_avg, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b1d78a5",
+   "id": "c28f4355",
    "metadata": {},
    "source": [
     "### SVM"
@@ -531,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0203c05",
+   "execution_count": 22,
+   "id": "3a2370b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,26 +623,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "99b6fb84",
+   "execution_count": 57,
+   "id": "1b5c55a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svc = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
-    "svc.fit(X_train_vect_avg, y_train)"
+    "svc_auto = make_pipeline(StandardScaler(), SVC(gamma='auto', random_state=0)).fit(X_train_vect_avg, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "61e29f9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc_scale = make_pipeline(StandardScaler(), SVC(gamma='scale', random_state=0)).fit(X_train_vect_avg, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ccb39bd",
+   "id": "6b2dea08",
    "metadata": {},
    "source": [
     "### Prediction"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "dcf6c75a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "9a6c6a0c",
+   "id": "77776a00",
    "metadata": {},
    "source": [
     "#### Random Forrest"
@@ -570,63 +669,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "421bcc95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gini with 100 estimator\n",
+      "Precision: 0.727 / Recall: 0.55 / Accuracy: 0.834\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred_rf = rf_model.predict(X_test_vect_avg)"
+    "y_pred_rf_gini_100 = rf_gini_100.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_rf_gini_100)\n",
+    "recall = recall_score(y_test, y_pred_rf_gini_100)\n",
+    "print('Gini with 100 estimator')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_rf_gini_100==y_test).sum()/len(y_pred_rf_gini_100), 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "23253e23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gini with 300 estimator\n",
+      "Precision: 0.743 / Recall: 0.556 / Accuracy: 0.839\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "precision = precision_score(y_test, y_pred_rf)\n",
-    "recall = recall_score(y_test, y_pred_rf)\n",
+    "y_pred_rf_gini_300 = rf_gini_300.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_rf_gini_300)\n",
+    "recall = recall_score(y_test, y_pred_rf_gini_300)\n",
+    "print('Gini with 300 estimator')\n",
     "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
-    "    round(precision, 3), round(recall, 3), round((y_pred_rf==y_test).sum()/len(y_pred_rf), 3)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d09e106",
-   "metadata": {},
-   "source": [
-    "#### XBoost"
+    "    round(precision, 3), round(recall, 3), round((y_pred_rf_gini_300==y_test).sum()/len(y_pred_rf_gini_300), 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "116dbbf3",
+   "execution_count": 49,
+   "id": "8ead0911",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entropy with 100 estimator\n",
+      "Precision: 0.742 / Recall: 0.57 / Accuracy: 0.841\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred_xgb = xgb.predict(X_test_vect_avg)"
+    "y_pred_rf_entropy_100 = rf_entropy_100.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_rf_entropy_100)\n",
+    "recall = recall_score(y_test, y_pred_rf_entropy_100)\n",
+    "print('Entropy with 100 estimator')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_rf_entropy_100==y_test).sum()/len(y_pred_rf_entropy_100), 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50f1d219",
+   "execution_count": 50,
+   "id": "e97fbcaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entropy with 300 estimator\n",
+      "Precision: 0.74 / Recall: 0.569 / Accuracy: 0.841\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "precision = precision_score(y_test, y_pred_xgb)\n",
-    "recall = recall_score(y_test, y_pred_xgb)\n",
+    "y_pred_rf_entropy_300 = rf_entropy_300.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_rf_entropy_300)\n",
+    "recall = recall_score(y_test, y_pred_rf_entropy_300)\n",
+    "print('Entropy with 300 estimator')\n",
     "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
-    "    round(precision, 3), round(recall, 3), round((y_pred_xgb==y_test).sum()/len(y_pred_xgb), 3)))"
+    "    round(precision, 3), round(recall, 3), round((y_pred_rf_entropy_300==y_test).sum()/len(y_pred_rf_entropy_300), 3)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a055b4c",
+   "id": "58f7801d",
+   "metadata": {},
+   "source": [
+    "#### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "06010a5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Friedman mse with 100 estimator\n",
+      "Precision: 0.676 / Recall: 0.54 / Accuracy: 0.819\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_xgb_friedman_100 = xgb_friedman_100.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_xgb_friedman_100)\n",
+    "recall = recall_score(y_test, y_pred_xgb_friedman_100)\n",
+    "print('Friedman mse with 100 estimator')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_xgb_friedman_100==y_test).sum()/len(y_pred_xgb_friedman_100), 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "9cfbafbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Friedman mse with 300 estimator\n",
+      "Precision: 0.686 / Recall: 0.557 / Accuracy: 0.824\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_xgb_friedman_300 = xgb_friedman_300.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_xgb_friedman_300)\n",
+    "recall = recall_score(y_test, y_pred_xgb_friedman_300)\n",
+    "print('Friedman mse with 300 estimator')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_xgb_friedman_300==y_test).sum()/len(y_pred_xgb_friedman_300), 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7fa21087",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "se with 100 estimator\n",
+      "Precision: 0.676 / Recall: 0.54 / Accuracy: 0.819\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_xgb_se_100 = xgb_se_100.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_xgb_se_100)\n",
+    "recall = recall_score(y_test, y_pred_xgb_se_100)\n",
+    "print('se with 100 estimator')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_xgb_se_100==y_test).sum()/len(y_pred_xgb_se_100), 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f02a1ad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "se with 300 estimator\n",
+      "Precision: 0.686 / Recall: 0.557 / Accuracy: 0.824\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_xgb_se_300 = xgb_se_300.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_xgb_se_300)\n",
+    "recall = recall_score(y_test, y_pred_xgb_se_300)\n",
+    "print('se with 300 estimator')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_xgb_se_300==y_test).sum()/len(y_pred_xgb_se_300), 3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc3628f7",
    "metadata": {},
    "source": [
     "#### SVC"
@@ -634,32 +885,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37a2bfc2",
+   "execution_count": 59,
+   "id": "dd323bb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gamma=auto\n",
+      "Precision: 0.741 / Recall: 0.515 / Accuracy: 0.832\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred_svc = svc.predict(X_test_vect_avg)"
+    "y_pred_svc_auto = svc_auto.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_svc_auto)\n",
+    "recall = recall_score(y_test, y_pred_svc_auto)\n",
+    "print('Gamma=auto')\n",
+    "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
+    "    round(precision, 3), round(recall, 3), round((y_pred_svc_auto==y_test).sum()/len(y_pred_svc_auto), 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "92ae8e66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gamma=scale\n",
+      "Precision: 0.741 / Recall: 0.515 / Accuracy: 0.832\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "precision = precision_score(y_test, y_pred_svc)\n",
-    "recall = recall_score(y_test, y_pred_svc)\n",
+    "y_pred_svc_scale = svc_scale.predict(X_test_vect_avg)\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred_svc_scale)\n",
+    "recall = recall_score(y_test, y_pred_svc_scale)\n",
+    "print('Gamma=scale')\n",
     "print('Precision: {} / Recall: {} / Accuracy: {}'.format(\n",
-    "    round(precision, 3), round(recall, 3), round((y_pred_svc==y_test).sum()/len(y_pred_svc), 3)))"
+    "    round(precision, 3), round(recall, 3), round((y_pred_svc_scale==y_test).sum()/len(y_pred_svc_scale), 3)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6904912c",
+   "id": "93388203",
    "metadata": {},
    "outputs": [],
    "source": []
